--- a/app/assets/stylesheets/components/content_area.scss
+++ b/app/assets/stylesheets/components/content_area.scss
@@ -28,13 +28,14 @@
 
 .page-title-header {
   display: inline-block;
-  font-size: em(13px);
+  font-size: em(16px);
   text-transform: uppercase;
   font-weight: $primary-font-semibold;
-  border-width: 1px;
-  border-style: solid;
-  padding: em(4px, 13px) em(90px, 13px);
-  margin: 0 0 em(30px, 13px);
+  margin: 0 0 em(30px, 16px);
+
+  span {
+    font-weight: $primary-font-extrabold;
+  }
 
   @include responsive-to(small) {
     margin: 0 0 em(15px, 13px);
