--- a/app/assets/stylesheets/components/products.scss
+++ b/app/assets/stylesheets/components/products.scss
@@ -24,7 +24,7 @@
   }
 
   hr {
-    margin: 0;
+    margin: em(1px) 0 0 0;
     padding: 0;
     border-top-width: 3px;
     border-top-style: solid;
