--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -1,3 +1,13 @@
+header {
+
+  .border-wrap {
+    @extend %clearfix;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    margin-bottom: em(20px);
+  }
+}
+
 .header-introduction {
   @extend %clearfix;
 
@@ -50,7 +60,7 @@
 
 .logo-link {
   display: inline-block;
-  padding: em(10px);
+  padding: em(10px) em(10px) 0;
 
   @include responsive-to(small) {
     padding: 0;
