--- a/app/views/pages/_basic.html.erb
+++ b/app/views/pages/_basic.html.erb
@@ -15,21 +15,22 @@
       </ul>
     </div>
 
-    <div class="inner <%= 'padded' if @side_menus.count.zero? %>">
-      <div class="text-center">
-        <h1 class="page-title-header">
-          <%= @presented_page.title %>
-        </h1>
-      </div>
-
-      <% if @industry.present? %>
-        <div class="text-center">
-          <%= @presented_page.image %>
-        </div>
-      <% end %>
-
+    <div class="inner padded">
       <% if @side_menus.count.zero? %>
+        <div class="text-center">
+          <h1 class="page-title-header">
+            <%= two_tone_title @presented_page.title %>
+          </h1>
+        </div>
+
         <div class="inner-content-area">
+
+          <% if @industry.present? %>
+            <div class="text-center">
+              <%= @presented_page.image %>
+            </div>
+          <% end %>
+
           <%= @presented_page.content %>
         </div>
       <% else %>
@@ -41,7 +42,20 @@
           </div>
 
           <div class="small-12 medium-9 columns">
+            <div class="text-center">
+              <h1 class="page-title-header">
+                <%= @presented_page.title %>
+              </h1>
+            </div>
+
             <div class="inner-content-area">
+
+              <% if @industry.present? %>
+                <div class="text-center">
+                  <%= @presented_page.image %>
+                </div>
+              <% end %>
+
               <%= @presented_page.content %>
             </div>
           </div>
