--- a/app/views/optimadmin/product_ranges/index.html.erb
+++ b/app/views/optimadmin/product_ranges/index.html.erb
@@ -1,3 +1,15 @@
+<%= content_for :head do %>
+  <script>
+  $(function() {
+    if($('.industry-filter-required').length >= 1) {
+      $('.module-sortable').sortable('destroy');
+      $('.drag-helper').hide();
+    }
+  });
+  </script>
+<% end %>
+
+
 <%= render 'optimadmin/shared/header/main_title', title: 'Manage Product Ranges' %>
 
 <div class="main-content">
@@ -10,15 +22,25 @@
       <%= render 'optimadmin/shared/module/index/order', options: [['Username', 'username']] %>
     -->
     <%= render 'optimadmin/shared/module/index/recycle_bin', items: @product_ranges.size, path: root_url %>
+
+
+    <% if params[:industry_id].blank? %>
+      <p class="industry-filter-required">
+        Please filter by industry to order product ranges.
+      </p>
+    <% end %>
   </div>
 
   <div class="row collapse module-list-index header">
+    <%= list_item 'large-1 hide-for-medium-down' do %>
+        <%= link_to octicon('settings') %>
+    <% end %>
 
     <%= list_item 'large-2 small-12' do 'Title' end %>
     <%= list_item 'large-2 small-12' do 'Industry' end %>
     <%= list_item 'large-2 small-12' do 'Products' end %>
 
-    <%= list_item 'large-2 hide-for-medium-down' do 'Image' end %>
+    <%= list_item 'large-1 hide-for-medium-down' do 'Image' end %>
 
     <%= list_item { 'Display' } %>
     <%= list_item { 'Highlight' } %>
@@ -27,6 +49,8 @@
     <%= list_item 'large-1 hide-for-medium-down text-center last' do 'Delete' end %>
   </div>
 
-  <%= render partial: 'product_range', collection: @product_ranges, as: :product_range_presenter %>
+  <div class='module-sortable' data-module="ProductRange">
+    <%= render partial: 'product_range', collection: @product_ranges, as: :product_range_presenter %>
+  </div>
   <%= paginate @product_ranges %>
 </div>
