--- a/app/views/optimadmin/products/_product.html.erb
+++ b/app/views/optimadmin/products/_product.html.erb
@@ -1,7 +1,11 @@
 <div class="row collapse module-list-index <%= cycle('odd', 'even') %>" data-equalizer="module-list" id="item_<%= product_presenter.id %>">
 
 
-  <div class="large-6 small-8 columns" data-equalizer-watch="module-list">
+  <div class="large-1 hide-for-medium-down columns" data-equalizer-watch="module-list">
+    <span class="drag-helper"></span>
+  </div>
+
+  <div class="large-5 small-8 columns" data-equalizer-watch="module-list">
     <%= product_presenter.title %>
   </div>
 
