--- a/app/views/optimadmin/products/index.html.erb
+++ b/app/views/optimadmin/products/index.html.erb
@@ -13,7 +13,11 @@
   </div>
 
   <div class="row collapse module-list-index header">
-    <%= list_item 'large-6 small-8' do 'Title' end %>
+    <%= list_item 'large-1 hide-for-medium-down' do %>
+        <%= link_to octicon('settings') %>
+    <% end %>
+
+    <%= list_item 'large-5 small-8' do 'Title' end %>
 
     <%= list_item 'large-2 hide-for-medium-down' do 'Image' end %>
 
@@ -24,6 +28,8 @@
     <%= list_item 'large-1 hide-for-medium-down text-center last' do 'Delete' end %>
   </div>
 
-  <%= render partial: 'product', collection: @products, as: :product_presenter %>
+  <div class='module-sortable' data-module="Product">
+    <%= render partial: 'product', collection: @products, as: :product_presenter %>
+  </div>
   <%= paginate @products %>
 </div>
