--- a/app/views/frequently_asked_questions/index.html.erb
+++ b/app/views/frequently_asked_questions/index.html.erb
@@ -21,7 +21,7 @@
     <div class="inner padded">
       <div class="text-center">
         <h1 class="page-title-header">
-          <%= @additional_content.title('FAQs') %>
+          <%= two_tone_title @additional_content.title('FAQs') %>
         </h1>
       </div>
 
