--- a/app/views/product_ranges/show.html.erb
+++ b/app/views/product_ranges/show.html.erb
@@ -51,10 +51,10 @@ $(document).on('click', '.industry-banner-control-link', function(e) {
         <div class="small-12 medium-9 columns">
           <div class="text-center">
             <div class="page-title-header">
-              <%= @product_range.title %>
+              <%= two_tone_title  @product_range.title %>
             </div>
           </div>
-          
+
           <div class="text-center clearfix">
             <%= render partial: 'products/product',
                 collection: BaseCollectionPresenter.new(collection: @product_range.displayable_products, view_template: self, presenter: ProductPresenter),
