--- a/app/views/product_ranges/technical_specification_downloads.html.erb
+++ b/app/views/product_ranges/technical_specification_downloads.html.erb
@@ -26,10 +26,10 @@
           </ul>
         </div>
 
-        <div class="small-12 medium-9 columns">          
+        <div class="small-12 medium-9 columns">
           <div class="text-center">
             <div class="page-title-header">
-              <%= @industry.name %>
+              <%= two_tone_title  @industry.name %>
             </div>
           </div>
 
