--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,10 +30,10 @@
           </ul>
         </div>
 
-        <div class="small-12 medium-9 columns">          
+        <div class="small-12 medium-9 columns">
           <div class="text-center">
             <div class="page-title-header">
-              <%= @product_range.title %>
+              <%= two_tone_title  @product_range.title %>
             </div>
           </div>
 
