--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -23,7 +23,7 @@
     <div class="inner padded">
       <div class="text-center">
         <h1 class="page-title-header">
-          Contact Us
+          <%= two_tone_title "Contact Us" %>
         </h1>
       </div>
 
