--- a/app/views/pages/_basic.html.erb
+++ b/app/views/pages/_basic.html.erb
@@ -44,7 +44,7 @@
           <div class="small-12 medium-9 columns">
             <div class="text-center">
               <h1 class="page-title-header">
-                <%= @presented_page.title %>
+                <%= two_tone_title @presented_page.title %>
               </h1>
             </div>
 
