--- a/app/views/product_ranges/index.html.erb
+++ b/app/views/product_ranges/index.html.erb
@@ -29,7 +29,7 @@
         <div class="small-12 medium-9 columns">
           <div class="text-center">
             <div class="page-title-header">
-              <%= @industry.name %>
+              <%= two_tone_title @industry.name %>
             </div>
           </div>
 
