--- a/app/views/team_members/index.html.erb
+++ b/app/views/team_members/index.html.erb
@@ -14,7 +14,7 @@
 
     <div class="inner padded text-center">
       <h1 class="page-title-header">
-          <%= @additional_content.title('Team Members') %>
+          <%= two_tone_title  @additional_content.title('Team Members') %>
       </h1>
 
       <div class="inner-content-area">
