--- a/app/assets/stylesheets/lib/variables.scss
+++ b/app/assets/stylesheets/lib/variables.scss
@@ -1,4 +1,5 @@
 $primary-font: 'Open Sans', sans-serif;
+$primary-font-normal: 400;
 $primary-font-semibold: 600;
 $primary-font-bold: 700;
 $primary-font-extrabold: 800;
