--- a/app/views/industries/_home.html.erb
+++ b/app/views/industries/_home.html.erb
@@ -1,25 +1,11 @@
 <div class="small-12 medium-6 columns">
-  <%= link_to industry_presenter.link, class: 'industry-collection-link' do %>
-    <div class="industry-collection-header">
-      <div class="industry-collection-name">
-        <div class="contrast-area border-bottom">
-          <%= industry_presenter.name %>
-        </div>
+  <%= link_to industry_presenter.link, class: 'industry-collection-link', style: "background: url(#{industry_presenter.background_image('homepage')}) no-repeat top right" do %>
+    <div class="industry-collection-content <%= cycle('red', 'white', 'blue', 'gold') %>">
+      <div class="industry-name">
+        <%= two_tone_title industry_presenter.name %>
       </div>
-      <div class="industry-collection-image">
-        <%= industry_presenter.image('homepage') %>
-      </div>
-    </div>
 
-    <div class="industry-collection-product-ranges">
-      <% industry_presenter.displayable_product_ranges.in_groups(2, false).each do |group| %>
-        <ul>
-          <% group.each do |product_range| %>
-            <%= render 'product_ranges/text_product_range',
-                   product_range_presenter: ProductRangePresenter.new(object: product_range, view_template: self) %>
-          <% end %>
-        </ul>
-      <% end %>
+        <%= render partial: 'product_ranges/text_product_range', collection: BaseCollectionPresenter.new(collection: industry_presenter.displayable_product_ranges, view_template: self, presenter: ProductRangePresenter), as: :product_range_presenter %>
     </div>
   <% end %>
 </div>
