--- a/app/views/optimadmin/industries/_form.html.erb
+++ b/app/views/optimadmin/industries/_form.html.erb
@@ -42,6 +42,7 @@
 
     <%= field_set_tag nil, id: 'tabs-2' do %>
             <%= f.image_field :image %>
+            <%= f.image_field :home_banner_image %>
 
           <% end %>
 
