--- a/app/views/optimadmin/industries/_industry.html.erb
+++ b/app/views/optimadmin/industries/_industry.html.erb
@@ -3,13 +3,18 @@
     <span class="drag-helper"></span>
   </div>
 
-  <div class="large-5 small-6 columns" data-equalizer-watch="module-list">
+  <div class="large-3 small-6 columns" data-equalizer-watch="module-list">
     <%= industry_presenter.name %>
   </div>
 
 
     <div class="large-2 hide-for-medium-down columns" data-equalizer-watch="module-list">
       <%= industry_presenter.edit_image(:image)%>
+    </div>
+
+
+    <div class="large-2 hide-for-medium-down columns" data-equalizer-watch="module-list">
+      <%= industry_presenter.edit_image(:home_banner_image)%>
     </div>
 
 
