--- a/app/views/optimadmin/industries/index.html.erb
+++ b/app/views/optimadmin/industries/index.html.erb
@@ -16,9 +16,10 @@
       <%= octicon('settings') %>
     <% end %>
 
-    <%= list_item 'large-5 small-4' do 'Name' end %>
+    <%= list_item 'large-3 small-4' do 'Name' end %>
 
     <%= list_item 'large-2 hide-for-medium-down' do 'Image' end %>
+    <%= list_item 'large-2 hide-for-medium-down' do 'Home Image' end %>
 
     <%= list_item { 'Display' } %>
     <%= list_item { 'View' } %>
