--- a/app/assets/stylesheets/components/navigation.scss
+++ b/app/assets/stylesheets/components/navigation.scss
@@ -51,7 +51,6 @@
   line-height: 1;
   text-align: center;
   height: 38px;
-  padding: 0 em(20px);
 
   @include responsive-to(small) {
     background: $black !important;
@@ -77,7 +76,7 @@
     color: $white;
     display: block;
     font-size: em(13px);
-    margin: 0 em(6px, 13px);
+    margin: 0 em(3px, 13px) 0 0;
     padding: em(13px, 13px) em(8px, 13px);
     max-height: 38px;
 
