--- a/app/assets/stylesheets/components/sticky_sidebar.scss
+++ b/app/assets/stylesheets/components/sticky_sidebar.scss
@@ -43,6 +43,10 @@
     right: -40px;
     width: 114px;
 
+    @media screen and (max-width: 1024px) {
+      right: -25px;
+    }
+
     .sticky-contact-expanded {
       display: none;
     }
