--- a/app/assets/stylesheets/components/navigation.scss
+++ b/app/assets/stylesheets/components/navigation.scss
@@ -3,7 +3,12 @@
   background-repeat: no-repeat;
   padding: 0 em(12px);
   margin: em(12px) 0 0;
-  width: 90%;
+
+  @include responsive-to(large) {
+    display: inline-block;
+    vertical-align: bottom;
+  }
+  //width: 90%;
 
   @include responsive-to(small) {
     background: $black !important;
@@ -51,6 +56,7 @@
   line-height: 1;
   text-align: center;
   height: 38px;
+  vertical-align: bottom;
 
   @include responsive-to(small) {
     background: $black !important;
@@ -99,6 +105,7 @@
   top: 94%;
   text-align: left;
   z-index: 3;
+  opacity: 0.9;
 
   @include responsive-to(small) {
     min-width: inherit;
