--- a/app/assets/stylesheets/components/product_ranges.scss
+++ b/app/assets/stylesheets/components/product_ranges.scss
@@ -7,6 +7,11 @@
   border-bottom-style: solid;
   margin: em(15px) em(5px);
   max-width: 188px;
+
+  &:hover {
+    text-decoration: none;
+    opacity: 0.9;
+  }
 }
 
 .product-range-content {
