--- a/app/views/optimadmin/industries/_industry.html.erb
+++ b/app/views/optimadmin/industries/_industry.html.erb
@@ -14,7 +14,7 @@
 
 
     <div class="large-2 hide-for-medium-down columns" data-equalizer-watch="module-list">
-      <%= industry_presenter.edit_image(:home_banner_image)%>
+      <%= industry_presenter.edit_image(:home_banner_image, 'image_name', 'home_banner_image')%>
     </div>
 
 
