--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,11 +22,12 @@
 // lib: SASS libraries, variables
 // layout: global layout (e.g. header, footer)
 // components: individual global elements (i.e. forms)
-@import 'optimadmin/global/editor',
+@import
 'lib/variables',
 'lib/mixins',
 'vendor/normalize',
 'vendor/foundation',
+'optimadmin/global/editor',
 'components/sticky_sidebar',
 'components/flash_messages',
 'components/google_maps',
