--- a/app/assets/stylesheets/layout/colours.scss
+++ b/app/assets/stylesheets/layout/colours.scss
@@ -382,6 +382,10 @@
 .red {
   background: darken($background-color, 25%);
 
+  .industry-banner img {
+    border: 1px solid $primary-red;
+  }
+
   h1,
   h2,
   h3,
