--- a/app/views/industries/show.html.erb
+++ b/app/views/industries/show.html.erb
@@ -73,7 +73,7 @@ $(document).on('click', '.industry-banner-control-link', function(e) {
               collection: BaseCollectionPresenter.new(collection: @industry.home_highlight_product_ranges, view_template: self, presenter: ProductRangePresenter),
               as: :product_range_presenter
             %>
-        <% else %>
+        <% elsif @industry.home_highlight_products.present? %>
           <%= render partial: 'products/product',
               collection: BaseCollectionPresenter.new(collection: @industry.home_highlight_products, view_template: self, presenter: ProductPresenter),
               as: :product_presenter
