--- a/app/views/optimadmin/industries/_form.html.erb
+++ b/app/views/optimadmin/industries/_form.html.erb
@@ -39,6 +39,10 @@
         <%= f.text_area :summary %>
       </div>
             <div class="field">
+        <%= f.label :introduction %><br>
+        <%= f.text_area :introduction, class: 'tinymce' %>
+      </div>
+            <div class="field">
         <%= f.label :accreditations %><br>
         <%= f.text_area :accreditations, class: 'tinymce' %>
       </div>
