--- a/app/views/optimadmin/industry_banners/index.html.erb
+++ b/app/views/optimadmin/industry_banners/index.html.erb
@@ -28,7 +28,7 @@
     <%= list_item 'large-1 hide-for-medium-down text-center last' do 'Delete' end %>
   </div>
 
-  <div class='module-sortable' data-module="Industry">
+  <div class='module-sortable' data-module="IndustryBanner">
     <%= render partial: 'industry_banner', collection: @industry_banners, as: :industry_banner_presenter %>
   </div>
 
