--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,7 @@
 'components/products',
 'components/team_members',
 'components/frequently_asked_questions',
+'components/tables',
 'layout/global',
 'layout/colours',
 'layout/header',
