--- a/app/views/pages/_basic.html.erb
+++ b/app/views/pages/_basic.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="small-12 columns content-area">
     <%= render 'industries/header', industry: @industry if @industry.present? %>
-    <%= render 'industries/header', industry: @presented_page unless @industry.present? %>
+    <%#= render 'industries/header', industry: @presented_page unless @industry.present? %>
 
     <div class="inner">
       <ul class="breadcrumbs">
