--- a/app/assets/stylesheets/layout/footer.scss
+++ b/app/assets/stylesheets/layout/footer.scss
@@ -53,7 +53,11 @@ footer {
     margin: em(22px, 13px) 0;
   }
 
+  .address {
+    font-size: em(12px, 13px);
+  }
+
   .legal {
-    font-size: em(10px, 13px);
+    font-size: em(8px, 13px);
   }
 }
