Snags and pre-go live checks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,7 @@
 'components/team_members',
 'components/frequently_asked_questions',
 'components/tables',
+'layout/print',
 'layout/global',
 'layout/colours',
 'layout/header',
