--- a/app/views/contacts/_remote_form.html.erb
+++ b/app/views/contacts/_remote_form.html.erb
@@ -1,3 +1,3 @@
-<%= form_for @contact, remote: true do |f| %>
+<%= form_for @contact, remote: true, html: { id: form.parameterize } do |f| %>
   <%= render 'contacts/form_fields', form: form, f: f %>
 <% end %>
