Explicitly set from

--- a/app/views/errors/403.html.erb
+++ b/app/views/errors/403.html.erb
@@ -18,7 +18,7 @@
       <div class="inner-content-area text-center">
         <p>The page you're looking for can not be found.</p>
 
-        <p>If you think this is an error, please contact us by using the form below.</p>
+        <p>If you think this is an error, please contact us by using the form on the sidebar.</p>
       </div>
     </div>
   </div>
